<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tpvics_r2.ui.EndingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.imranahmed.sero2022.models.Form" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_effect"
        android:orientation="vertical">


        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fldGrpEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- istatus  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVistatus"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/hh21" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/istatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/istatusa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus01"
                                android:onClick="@{()->form.setHh21(`1`)}" />
                            <!--android:checked="@{form.hh21.equals(`1`)}"-->

                            <RadioButton
                                android:id="@+id/istatusb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus02"
                                android:onClick="@{()->form.setHh21(`2`)}" />
                            <!--android:checked="@{form.hh21.equals(`2`)}"-->

                            <RadioButton
                                android:id="@+id/istatusc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus03"
                                android:onClick="@{()->form.setHh21(`3`)}" />
                            <!--android:checked="@{form.hh21.equals(`3`)}"-->

                            <RadioButton
                                android:id="@+id/istatusd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus04"
                                android:onClick="@{()->form.setHh21(`4`)}"/>
                            <!--android:checked="@{form.hh21.equals(`4`)}"-->

                            <RadioButton
                                android:id="@+id/istatuse"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus05"
                                android:onClick="@{()->form.setHh21(`5`)}"/>
                            <!--android:checked="@{form.hh21.equals(`5`)}"-->

                            <RadioButton
                                android:id="@+id/istatusf"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus06"
                                android:onClick="@{()->form.setHh21(`6`)}"/>
                            <!--android:checked="@{form.hh21.equals(`6`)}"-->

                            <RadioButton
                                android:id="@+id/istatusg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus07"
                                android:onClick="@{()->form.setHh21(`7`)}"/>
                            <!--android:checked="@{form.hh21.equals(`7`)}"-->


                            <RadioButton
                                android:id="@+id/istatush"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ec2205"
                                android:onClick="@{()->form.setHh21(`8`)}" />
                            <!--android:checked="@{form.hh21.equals(`8`)}"-->

                            <RadioButton
                                android:id="@+id/istatusi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ec2206"
                                android:onClick="@{()->form.setHh21(`9`)}" />
                            <!--android:checked="@{form.hh21.equals(`9`)}"-->


                            <RadioButton
                                android:id="@+id/istatus96"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus96"
                                android:onClick="@{()->form.setHh21(`96`)}"/>
                            <!--android:checked="@{form.hh21.equals(`96`)}"-->

                            <EditText
                                android:id="@+id/istatus96x"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                                android:hint="@string/istatus96"
                                android:tag="istatus96"
                                android:text="@{form.hh21xx}"
                                android:visibility="@{form.hh21.equals(`96`) ? View.VISIBLE : View.GONE}" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <RelativeLayout
                    android:id="@+id/llbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_shape_green"
                        android:backgroundTintMode="src_atop"
                        android:onClick="btnEnd"
                        android:padding="10dp"
                        android:text="Save"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>
                <!--EndButton LinearLayout-->

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</layout>