<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.imranahmed.sero2022.models.Form" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">


            <!-- CUSTOM TOOLBAR -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/CustomToolbarTheme"
                app:popupTheme="@style/CustomPopupTheme"
                app:subtitle="@string/sectionhhhouseholdinformationhhmainheading"
                app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
                app:title="@string/sectionhhhouseholdinformationhhsubheading"
                app:titleTextAppearance="@style/Toolbar.TitleText" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- hh21  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVhh21"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Qhh21" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/hh21" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/hh21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/hh21a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`1`)}"
                                android:onClick="@{()->form.setHh21(`1`)}"
                                android:text="@string/hh21a" />

                            <RadioButton
                                android:id="@+id/hh21b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`2`)}"
                                android:onClick="@{()->form.setHh21(`2`)}"
                                android:text="@string/hh21b" />

                            <RadioButton
                                android:id="@+id/hh21c"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`3`)}"
                                android:onClick="@{()->form.setHh21(`3`)}"
                                android:text="@string/hh21c" />

                            <RadioButton
                                android:id="@+id/hh21d"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`4`)}"
                                android:onClick="@{()->form.setHh21(`4`)}"
                                android:text="@string/hh21d" />

                            <RadioButton
                                android:id="@+id/hh21e"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`5`)}"
                                android:onClick="@{()->form.setHh21(`5`)}"
                                android:text="@string/hh21e" />

                            <RadioButton
                                android:id="@+id/hh21f"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`6`)}"
                                android:onClick="@{()->form.setHh21(`6`)}"
                                android:text="@string/hh21f" />

                            <RadioButton
                                android:id="@+id/hh21g"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`7`)}"
                                android:onClick="@{()->form.setHh21(`7`)}"
                                android:text="@string/hh21g" />

                            <RadioButton
                                android:id="@+id/hh21x"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{form.hh21.equals(`96`)}"
                                android:onClick="@{()->form.setHh21(`96`)}"
                                android:text="@string/hh21x" />

                            <EditText
                                android:id="@+id/hh21xx"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                                android:hint="@string/hh21x"
                                android:tag="hh21x"
                                android:text="@={form.hh21xx}"
                                android:visibility="@{form.hh21.equals(`96`) ? View.VISIBLE : View.GONE}" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <RelativeLayout
                    android:id="@+id/llbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_shape_red"
                        android:onClick="btnEnd"
                        android:padding="10dp"
                        android:text="Cancel"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_shape_green"
                        android:backgroundTintMode="src_atop"
                        android:onClick="btnContinue"
                        android:padding="10dp"
                        android:text="Save"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>
                <!--EndButton LinearLayout-->


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>